# life-long-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
life_long_memory/: search.py
life_long_memory/parsers/: base.py  claude_code.py
src/: auto.py  background.py  cli.py  config.py  db.py  entities.py  llm.py  mcp_server.py  promote.py  search.py  summarize.py
src/life_long_memory/: __init__.py  background.py  cli.py  config.py  db.py  entities.py  llm.py  mcp_server.py  promote.py  summarize.py
src/life_long_memory/parsers/: __init__.py  codex.py
src/parsers/: __init__.py  base.py  claude_code.py  codex.py  gemini.py
tests/: test_core.py
