[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-long-memory"
version = "0.1.2"
description = "Lifelong context memory system for CLI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/lingzhi227/life-long-memory"
Repository = "https://github.com/lingzhi227/life-long-memory"

[project.optional-dependencies]
summarize = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
mcp = ["mcp[cli]>=1.0.0"]
all = ["life-long-memory[summarize,openai,mcp]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
life-long-memory = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
